--- a/tests/plugins/dummy/meson.build
+++ b/tests/plugins/dummy/meson.build
@@ -22,7 +22,7 @@ dummy_plugin_test = executable('dummy_plugin_test',
 test('Rin dummy plugin test',
   dummy_plugin_test,
   depends: dummy_plugin,
-  env: {'RIN_PLUGIN_PATH': meson.current_build_dir() / '/plugins/'}
+  env: {'RIN_PLUGIN_PATH': meson.current_build_dir() / '../plugins/dummy'}
 )
 
 
@@ -36,5 +36,5 @@ dummy_plugin_test_gmodule = executable('dummy_plugin_test_gmodule',
 test('Rin dummy plugin test (gmodule)',
   dummy_plugin_test_gmodule,
   depends: dummy_plugin,
-  env: {'RIN_PLUGIN_PATH': meson.current_build_dir() / '/plugins/'}
+  env: {'RIN_PLUGIN_PATH': meson.current_build_dir() / '../plugins/dummy'}
 )
