save changes, add vcpkg... I love windows...

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,12 +1,24 @@
 cmake_minimum_required(VERSION 3.16)
+
+if(NOT DEFINED CMAKE_TOOLCHAIN_FILE)
+  if(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/vendor/vcpkg/scripts/buildsystems/vcpkg.cmake)
+    set(CMAKE_TOOLCHAIN_FILE ${CMAKE_CURRENT_SOURCE_DIR}/vendor/vcpkg/scripts/buildsystems/vcpkg.cmake CACHE STRING "" FORCE)
+    message(STATUS "Using vcpkg toolchain from vendor/vcpkg")
+  endif()
+endif()
+
 project(rin LANGUAGES C)
+
+if (NOT CMAKE_TOOLCHAIN_FILE)
+  message (STATUS "No toolchain file specified, using default settings.")
+endif ()
 
 set(CMAKE_C_STANDARD 17)
 set(CMAKE_C_STANDARD_REQUIRED ON)
+set(CMAKE_C_EXTENSIONS OFF)
 
-find_package(PkgConfig REQUIRED)
-pkg_check_modules(GLIB REQUIRED glib-2.0 gobject-2.0 gmodule-2.0 gio-2.0)
 enable_testing()
+
 add_subdirectory(src)
 add_subdirectory(plugins)
 add_subdirectory(tests)
